--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,10 @@
     "extra": {
         "laravel": {
             "dont-discover": []
-        }
+        },
+        "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var"
     },
     "autoload": {
         "psr-4": {
